Fixed donate page on mobile

--- a/donate/style.css
+++ b/donate/style.css
@@ -48,3 +48,22 @@
     margin-top: 2.8em;
     margin-bottom: 2.4em;
 }
+
+@media (max-width: 550px) {
+    #content {
+        flex-direction: column;
+        gap: 0px;
+    }
+
+    #methods {
+        margin-top: 15px;
+        margin-left: 2px;
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 450px) {
+    #content {
+        margin: 3em 4em;
+    }
+}
